Fix page links not aligned with the content (#348)
Closes #342.

--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -107,7 +107,7 @@
 
 .page-links {
 	clear: both;
-	margin: 0 0 1.5em;
+	margin-bottom: 1.5em;
 }
 
 .entry-footer span {
